--- a/languages/it/lang.csv
+++ b/languages/it/lang.csv
@@ -390,3 +390,8 @@
 "the installation was completed","l'installazione è stata completata"
 "error username or password","utente o password errati"
 "create account","Crea account"
+"view list","visualizza elenco"
+"password required","Password richiesta"
+"enter your password","Immetti la password"
+"create new","crea nuovo"
+"continue width","continua con"
